added apiKey and fecth request

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             $(".card").append("<div class='description'>Weather</div>");
             $(".card").append("<div class='humidity'>Humidity: 60%</div>");
             $(".card").append("<div class='windy'>Wind speed: 25mph</div>");
+            // $(".card").css("color", "orange");
             // $("h1").css("border", "60px solid green");
             // $("h1:first").css("border", "60px solid red");
             // $("h1:last").css("border", "60px solid blue");
@@ -118,6 +119,11 @@
     .search {
         display: flex;
         width: 60%;
+    }
+    input.search {
+        border: 50px;
+        outline: 10px;
+        padding: auto;
     }
 
 
