added event listener

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             $(".card").append("<div class='search'></div>");
             // $(".card").append("<input type='text' class='searchBar'></input>");
             $(".card").append("<input type='text' class='searchBar' id='info'></input>")
-            $(".card").append("<button>Search for a City</button>");
+            $(".card").append("<button class='searchButton' >Search for a City</button>");
             $(".card").append("<div class='weather'></div>");
             $(".card").append("<h2 class='city'>Weather in Denver</h2>");
-            $(".card").append("<div class='temperature'>70 °F</div>");
+            $(".card").append("<h3 class='temperature'>70 °F</h3>");
             $(".card").append("<img src='' alt='' class='icon' />");
-            $(".card").append("<div class='description'>Weather</div>");
+            $(".card").append("<div class='description'>Description:</div>");
             $(".card").append("<div class='humidity'>Humidity: 60%</div>");
-            $(".card").append("<div class='windy'>Wind speed: 25mph</div>");
+            $(".card").append("<div class='wind'>Wind speed: 25mph</div>");
             // $(".card").css("color", "orange");
             // $("h1").css("border", "60px solid green");
             // $("h1:first").css("border", "60px solid red");
