--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
             $(".card").append("<div class='humidity'>Humidity: 60%</div>");
             $(".card").append("<div class='wind'>Wind speed: 25mph</div>");
             $(".card").append("<div class=wrap>");
-            $(".wrap").append("<div class='col-sm-4 day-1'>day</div>");
-            $(".wrap").append("<div class='col-sm-4 day-2'>day</div>");
-            $(".wrap").append("<div class='col-sm-4 day-3'>day</div>");
-            $(".wrap").append("<div class='col-sm-4 day-4'>day</div>");
-            $(".wrap").append("<div class='col-sm-4 day-5'>day</div>");
+            $(".wrap").append("<div class='col-sm-4 day-1'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-4 day-2'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-4 day-3'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-4 day-4'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
             $("body").css("background", "Url('./assets/images/azamat.jpg')");
             $("#dataCollect").append("<input type='text' id='info'></input>");
             $("#dataCollect").append("<button id='submit'>Submit</button>");
