added wind display to 4 day forecast

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             $(".card").append("<img src='' alt='' class='icon' />");
             $(".card").append("<div class='description'>Description:</div>");
             $(".card").append("<div class='humidity'>Humidity: 60%</div>");
-            $(".card").append("<div class='wind'>Wind speed: 25mph</div>");
+            $(".card").append("<div class='wind'>Wind speed: 25MPH</div>");
             $(".card").append("<div class='wrap row'></div>");
             $(".wrap").append("<div class='col-sm-3 day-1'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
             $(".wrap").append("<div class='col-sm-3 day-2'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
