--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             $(".card").append("<div class='humidity'>Humidity: 60%</div>");
             $(".card").append("<div class='wind'>Wind speed: 25MPH</div>");
             $(".card").append("<div class='wrap row'></div>");
-            $(".wrap").append("<div class='col-sm-3 day-1'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
-            $(".wrap").append("<div class='col-sm-3 day-2'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
-            $(".wrap").append("<div class='col-sm-3 day-3'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
-            $(".wrap").append("<div class='col-sm-3 day-4'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div><div class='descDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 day-1'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 day-2'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 day-3'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 day-4'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
             $("body").css("background", "Url('./assets/images/azamat.jpg')");
-            $("#dataCollect").append("<input type='text' id='info'></input>");
-            $("#dataCollect").append("<button id='submit'>Submit</button>");
+            // $("#dataCollect").append("<input type='text' id='info'></input>");
+            $(".card").append("<button class='clearHistory'>Clear</button>");
             $(".card").append("<h5>History</h5><ul class='listCities'></ul>");
 
             
