--- a/index.html
+++ b/index.html
@@ -77,26 +77,18 @@
     }
 
      .card {
-        display: flex;
+        /* display: flex; */
         align-items: center;
         justify-content: center;
         width: 100%;
+        height: 800px;
         background-color: lime;
         margin: 0%;
         max-width: 992px;
         border-radius: 10px;
     }
 
-    .search {
-        display: flex;
-        width: 60%;
-    }
-    input.search {
-        border: 50px;
-        outline: 10px;
-        padding: auto;
-    }
-
+    
 
 </style>
     </head>
