--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <link type="text/css" rel="stylesheet" href="./materialize.min.css"
             media="screen,projection"/>
         <link rel="stylesheet" href="./styles.css">
+        <link src="./assets/archive/worldcities.csv"/>
         <script>
 
         $("document").ready(function() {            
