--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
 
         $("document").ready(function() {            
             $("body").append("<div class='card'></div>");
-            $(".card").append("<div class='currentDay'></div>");
-            $(".card").append("<div class='search'></div>");
+            $(".card").append("<div class='currentDay'>'<div class='search'></div></div>");
             // $(".card").append("<input type='text' class='searchBar'></input>");
-            $(".card").append("<form autocomplete='off'><div><input type='text' class='searchBar' id='info' ></input></div></form>")
+            $(".card").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
             $(".card").append("<button class='searchButton' >Search for a City</button>");
             $(".card").append("<div class='weather'></div>");
-            $(".card").append("<h3 class='city'>Weather in Denver</h3>");
+            $(".card").append("<h3 class='city'>Current Weather in Denver</h3>");
             $(".card").append("<h4 class='temperature'>70 °F</h4>");
             $(".card").append("<img src='' alt='' class='icon' />");
             $(".card").append("<div class='description'>Description:</div>");
@@ -78,7 +77,7 @@
     }
 
      .card {
-        /* display: flex; */
+        display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
