--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WeatherApp</title>
-
         <script src="./jquery/jquery.js"></script>
         <link rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -35,10 +34,9 @@
         <link src="./assets/archive/worldcities.csv"/>
         <script>
 
-        $("document").ready(function() {            
+        $("document").ready(function() {
             $("body").append("<div class='card'></div>");
             $(".card").append("<div class='currentDay'>'<div class='search'></div></div>");
-            // $(".card").append("<input type='text' class='searchBar'></input>");
             $(".card").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
             $(".card").append("<button class='searchButton' >Search for a City</button>");
             $(".card").append("<div class='weather'></div>");
@@ -53,11 +51,9 @@
             $(".wrap").append("<div class='col-sm-3 day-2'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
             $(".wrap").append("<div class='col-sm-3 day-3'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
             $(".wrap").append("<div class='col-sm-3 day-4'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
-            $("body").css("background", "Url('./assets/images/azamat.jpg')");
-            // $("#dataCollect").append("<input type='text' id='info'></input>");
+            $("body").css("background", "Url('./assets/images/azamat.jpg')");;
             $(".card").append("<button class='clearHistory'>Clear</button>");
             $(".card").append("<h5>History</h5><ul class='listCities'></ul>");
-
             
         });
 
@@ -69,7 +65,7 @@
             crossorigin="anonymous"></script>
         <script type="text/javascript" src="./materialize.min.js"></script>
         <style>
-    body{
+        body{
         display: flex;
         justify-content: center;
         height: 100vh;
@@ -87,10 +83,7 @@
         max-width: 992px;
         border-radius: 10px;
     }
-
-    
-
-</style>
+    </style>
     </head>
     <body>
 
