--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             $("body").append("<div class='card'></div>");
             $(".card").append("<div class='currentDay'>'<div class='search'></div></div>");
             $(".card").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
-            $(".card").append("<button class='searchButton' >Search for a City</button>");
+            $(".card").append("<button class='btn' >Search for a City</button>");
             $(".card").append("<div class='weather'></div>");
             $(".card").append("<h3 class='city'>Current Weather in Denver</h3>");
             $(".card").append("<h4 class='temperature'>70 °F</h4>");
