changed button effects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             $("body").append("<div class='card'></div>");
             $(".card").append("<div class='currentDay'>'<div class='search'></div></div>");
             $(".card").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
-            $(".card").append("<button class='btn' >Search for a City</button>");
+            $(".card").append("<button class='btn waves-effect' >Search for a City</button>");
             $(".card").append("<div class='weather'></div>");
             $(".card").append("<h3 class='city'>Current Weather in Denver</h3>");
             $(".card").append("<h4 class='temperature'>70 °F</h4>");
@@ -56,7 +56,7 @@
             $(".wrap").append("<div class='col-sm-3 day-3'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
             $(".wrap").append("<div class='col-sm-3 day-4'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
             $("body").css("background", "Url('./assets/images/azamat.jpg')");;
-            $(".card").append("<button class='clearHistory'>Clear</button>");
+            $(".card").append("<button class='btn-floating waves-effect waves-light red'>Clear</button>");
             $(".card").append("<h5>History</h5><ul class='listCities'></ul>");
             
         });
