--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             $("body").append("<div class='card'></div>");
             $(".card").append("<div class='currentDay'>'<div class='search'></div></div>");
             $(".card").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
-            $(".card").append("<button class='btn waves-effect' >Search for a City</button>");
+            $(".card").append("<button class='btn waves-effect' ><i class='material-icons left'>search</i> Search for a City</button>");
             $(".card").append("<div class='weather'></div>");
             $(".card").append("<h3 class='city'>Current Weather in Denver</h3>");
             $(".card").append("<h4 class='temperature'>70 °F</h4>");
@@ -51,14 +51,14 @@
             $(".card").append("<div class='humidity'>Humidity: 60%</div>");
             $(".card").append("<div class='wind'>Wind speed: 25MPH</div>");
             $(".card").append("<div class='wrap row'></div>");
-            $(".wrap").append("<div class='col-sm-3 day-1'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
-            $(".wrap").append("<div class='col-sm-3 day-2'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
-            $(".wrap").append("<div class='col-sm-3 day-3'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
-            $(".wrap").append("<div class='col-sm-3 day-4'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 red day-1'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 orange day-2'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 yellow day-3'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
+            $(".wrap").append("<div class='col-sm-3 pink day-4'><div class='dayDisplay'></div><img src='' alt='' class='icon' /><div class='tempDisplay'></div><div class='descDisplay'></div><div class='humidityDisplay'></div><div class='windDisplay'></div></div>");
             $("body").css("background", "Url('./assets/images/azamat.jpg')");;
-            $(".card").append("<button class='btn-floating waves-effect waves-light red'>Clear</button>");
+            $(".card").append("<button class='btn-flat waves-effect waves-light red'>Clear</button>");
             $(".card").append("<h5>History</h5><ul class='listCities'></ul>");
-            
+
         });
 
     </script>
