--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        color: black;
+        font-weight: bold;
         width: 100%;
         height: 800px;
         background-color: lime;
