--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <script>
 
         $("document").ready(function() {
-            $("body").append("<div class='card'></div>");
+            $("body").append("<div class='card col-lg-12'></div>");
             $(".card").append("<div class='currentDay'>'<div class='search'></div></div>");
             $(".card").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
             $(".card").append("<button class='btn waves-effect' ><i class='material-icons left'>search</i> Search for a City</button>");
