added padding to card

--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         justify-content: center;
         color: black;
         font-weight: bold;
-        width: 100%;
+        width: 1000px;
         height: 800px;
         background-color: lime;
         margin: 0%;
-        max-width: 992px;
         border-radius: 10px;
+        padding: auto;
     }
     </style>
     </head>
