--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             $("body").append("<div class='card col-lg-12'></div>");
             $(".card").append("<div class='container'></div>");
             $(".card").append("<div class='currentDay'>'<div class='search'></div></div>");
-            $(".card").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
-            $(".card").append("<button class='btn waves-effect' ><i class='material-icons left'>search</i> Search for a City</button>");
+            $(".container").append("<div><input type='text' class='searchBar' id='info' ></input></div>")
+            $(".container").append("<button class='btn waves-effect' ><i class='material-icons left'>search</i> Search for a City</button>");
             $(".card").append("<div class='weather'></div>");
             $(".card").append("<h3 class='city'>Current Weather in Denver</h3>");
             $(".card").append("<h4 class='temperature'>70 °F</h4>");
@@ -76,9 +76,9 @@
             body{
                 display: flex;
                 justify-content: center;
-        height: 100vh;
-        align-items: center;
-    }
+                height: 100vh;
+                align-items: center;
+            }
 
      .card {
         display: flex;
