formated redundant styles

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
         justify-content: center;
         color: black;
         font-weight: bold;
-        width: 1000px;
-        height: 800px;
+        /* width: 1000px;         */
         background-color: lime;
         margin: 0%;
         border-radius: 10px;
