added hover effect to wrap class

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             $(".box-1").append("<h5>History</h5><ul class='listCities'></ul>");
             $(".box-2").append("<button class='btn-flat waves-effect waves-light red'>Clear</button>");
             
-        });
+        }); 
         
         </script>
         <script
@@ -79,7 +79,7 @@
             body{
                 display: flex;
                 justify-content: center;
-                height: 100vh;
+                height: 100vh;+
                 align-items: center;
             }
 
