--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         justify-content: center;
         color: black;
         font-weight: bold;
-        /* width: 1000px;         */
+        width: 1000px;        
         background-color: lime;
         margin: 0%;
         border-radius: 10px;
