--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             $(".card").append("<div class='box row'></div>");
             $(".box").append("<div class='col-md-6 box-1'></div>");
             $(".box").append("<div class='col-md-6 box-2'></div>");
-            $(".box-1").append("<h5>History</h5><ul class='listCities'></ul>");
+            $(".box-1").append("<h5>Search History</h5><ul class='listCities'></ul>");
             $(".box-2").append("<button class='btn-flat waves-effect waves-light red'>Clear</button>");
             
         }); 
