--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             body{
                 display: flex;
                 justify-content: center;
-                height: 100vh;+
+                height: 100vh;
                 align-items: center;
             }
 
